--- a/markup/static/less/libraries/components/form.less
+++ b/markup/static/less/libraries/components/form.less
@@ -112,6 +112,7 @@
 .hook-form() {
   border: @global-border-width solid @global-border;
   border-radius: @global-border-radius;
+  box-shadow: 0 5px 20px fade(#303032, 7%);
 }
 .hook-form-single-line() {}
 .hook-form-multi-line() {}
