--- a/markup/static/less/vars.less
+++ b/markup/static/less/vars.less
@@ -61,7 +61,7 @@
 
 @global-background:                             #fff;
 
-@global-muted-background:                       #D9DADD;
+@global-muted-background:                       #F1F2F4;
 @global-primary-background:                     #2792FF;
 @global-secondary-background:                   #222;
 
