.uk-card-info and card-model

--- a/markup/static/less/libraries/components/background.less
+++ b/markup/static/less/libraries/components/background.less
@@ -62,5 +62,11 @@
   .uk-background-12 {
     background: linear-gradient(121.62deg, #F2994A 0%, #F2C94C 100%);
   }
+  .uk-background-13 {
+    background: #376BC7;
+  }
+  .uk-background-14 {
+    background: #FBF659;
+  }
 
 }
