update: - background - base - hero - logo - page
Add:
- feature
- dealer
- tab
- person

--- a/markup/static/less/libraries/components/background.less
+++ b/markup/static/less/libraries/components/background.less
@@ -11,7 +11,7 @@
 
 @background-default-background:                 @global-background;
 @background-muted-background:                   @global-color;
-@background-primary-background:                 @global-primary-background;
+@background-primary-background:                 #376BC7;
 @background-secondary-background:               @global-secondary-background;
 
 // Hooks
@@ -21,7 +21,7 @@
 
 .hook-background-misc() {
   .uk-background-warning {
-    background-color: @global-warning-background;
+    background-color: #FFDA0D;
   }
   .uk-background-danger {
     background-color: @global-danger-background;
