--- a/markup/static/less/libraries/components/base.less
+++ b/markup/static/less/libraries/components/base.less
@@ -104,7 +104,21 @@
 .hook-base-blockquote() {}
 .hook-base-blockquote-footer() {}
 .hook-base-pre() {}
-.hook-base-misc() {}
+
+.hook-base-misc() {
+  .uk-date {
+    font-size: 14px;
+    opacity: 0.6;
+  }
+  .uk-back {
+    font-size: 14px;
+    opacity: 0.6;
+    
+    > :first-child {
+      margin-right: 15px;
+    }
+  }
+}
 
 
 // Inverse
