--- a/markup/static/less/libraries/components/logo.less
+++ b/markup/static/less/libraries/components/logo.less
@@ -18,8 +18,21 @@
   // color: #ACACAE;
 }
 
+.uk-hero {
+  .uk-logo-image {
+    svg * {
+      fill: currentColor;
+    }
+  }
+}
+
 .hook-inverse() {
   .uk-logo-description {
     color: #fff;
+  }
+  .uk-logo-image {
+    svg * {
+      fill: currentColor;
+    }
   }
 }
