--- a/markup/static/less/libraries/modules/dealer.less
+++ b/markup/static/less/libraries/modules/dealer.less
@@ -34,6 +34,24 @@
   }
 }
 
+.hook-section-misc() {
+  .uk-hero-dealer {
+    min-height: 360px;
+    .uk-hero-description {
+      opacity: 0.6;
+      font-size: 16px;
+      line-height: 1.2;
+      margin-top: -0.5em;
+      margin-left: 0.2em;
+      font-weight: 300;
+    }
+    .uk-hero-body {
+      display: flex;
+      align-items: flex-end;
+    }
+  }
+}
+
 .hook-grid-misc() {
   .uk-grid-cars {
 
