--- a/markup/static/less/libraries/modules/services.less
+++ b/markup/static/less/libraries/modules/services.less
@@ -1,9 +1,19 @@
 .hook-card-misc() {
   .uk-card-info {
    position: relative;
-   min-height: 375px;
+   min-height: 250px;
    border-radius: 10px;
    overflow: hidden;
+    @media (min-width: 640px) {
+      min-height: 300px;
+    }
+    @media (min-width: 960px) {
+      min-height: 375px;
+    }
+
+    p {
+      margin-top: 0;
+    }
    
     .uk-card-background {
       position: absolute;
@@ -33,10 +43,18 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding: 60px;
+      padding: 30px;
+
+      @media (min-width: 960px) {
+        padding: 60px;
+      }
     }
     .uk-card-title {
-      font-size: 40px;
+      margin-bottom: 10px;
+
+      @media (min-width: 960px) {
+        font-size: 40px;
+      }
     }
     &.uk-card-info-2 {
       color: @global-muted-color;
@@ -47,49 +65,114 @@
 
       .uk-card-foreground {
         justify-content: flex-start;
-        padding: 20px 40px 80px 80px; 
+        padding: 30px; 
+
+        @media (min-width: 960px) {
+          padding: 20px 40px 80px 80px;
+        }
       }
     }
+  }
+
+  .uk-card-service {
+    padding: 20px;
+    border: @global-border-width solid @global-border;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+
+    &:hover {
+      border-color: @global-warning-background;
+      box-shadow: 0px 0px 0px 2px @global-warning-background;
+    }
+
+    @media (min-width: 640px) {
+      padding: 35px;
+    }
+  }
+
+  .uk-card-certificate {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
   }
 
 }
 
 .hook-grid-misc() {
   .uk-info-box {
-    .uk-row {
-      margin-top: 0; 
-      display: flex;
+    .uk-row {    
+      @media (min-width: 960px) {
+        margin-top: 0; 
+        display: flex;
 
-      &:first-child {
-        .uk-card-info {
-          z-index: 1;
-        }
-      } 
-
-      &:nth-child(2n) {
-        flex-direction: row-reverse;
-        margin-top: -55px;
-
-        
-        .uk-card-info-2 {
-          .uk-card-foreground {
-            padding: 80px 60px 30px 0;
-            justify-content: flex-end;
+        &:first-child {
+          .uk-card-info {
+            z-index: 1;
+          }
+        } 
+  
+        &:nth-child(2n) {
+          flex-direction: row-reverse;
+          margin-top: -55px;
+  
+          
+          .uk-card-info-2 {
+            .uk-card-foreground {
+              padding: 80px 60px 30px 0;
+              justify-content: flex-end;
+            }
+          }
+        } 
+        .uk-col {
+          width: 48%;
+          &:first-child {
+            width: 52%;
           }
         }
-      } 
-      .uk-col {
-        width: 48%;
+      }
+    }
+  }
+
+  .uk-info-2 {
+    .uk-row {
+      @media (min-width: 960px) {
         &:first-child {
-          width: 52%;
-        }
+          flex-direction: row-reverse;
+
+          .uk-card-info-2 {
+            .uk-card-foreground {
+              padding: 40px 80px 80px 0;
+            }
+          }
+        } 
+
+        &:nth-child(2n) {
+          flex-direction: row;
+          margin-top: -55px;
+
+          .uk-card-info {
+            z-index: 1;
+          } 
+
+          .uk-card-info-2 {
+            .uk-card-foreground {
+              padding: 80px 60px 30px 40px;
+              justify-content: center;
+            }
+          }
+        } 
       }
     }
   }
 }
 
 .hook-section-misc() {
-  .uk-section- {
-
+  .uk-services {
+    h3 {
+      @media (min-width: 960px) {
+        margin-bottom: 50px;
+      }
+    }
   }
 }
