--- a/markup/static/less/libraries/modules/news.less
+++ b/markup/static/less/libraries/modules/news.less
@@ -27,7 +27,7 @@
       }
     }
 
-    h5 {
+    .uk-card-title {
       margin: 10px 0 15px;
       @media (min-width: 960px) {
         margin-bottom: 40px;
