--- a/markup/static/less/libraries/modules/stock.less
+++ b/markup/static/less/libraries/modules/stock.less
@@ -9,13 +9,14 @@
     border-radius: 10px;
     overflow: hidden;
     text-align: center;
-    color: @global-muted-color;
-    background-color: @global-muted-background;
 
     &:hover {
       text-decoration: none;
+    }
+
+    &.uk-disabled {
       color: @global-muted-color;
-      box-shadow: @global-large-box-shadow;
+      background: @global-muted-background;
     }
 
     &.uk-light {
