--- a/markup/static/less/libraries/modules/car.less
+++ b/markup/static/less/libraries/modules/car.less
@@ -33,6 +33,64 @@
       }
     }
   }
+
+  .uk-card-car {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    overflow: hidden;
+    min-height: 350px;
+    box-shadow: @global-medium-box-shadow;
+
+    .uk-card-img {
+      height: 220px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .uk-card-title {
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+
+    .uk-card-body {
+      padding: 20px 20px 25px;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      &:before, &:after {
+        display: none;
+      }
+    }
+    
+    .uk-price-holder {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .uk-card-price {
+      display: inline-block;
+      padding: 5px 7px;
+      background-color: @global-success-background;
+      color: @global-inverse-color;
+      font-size: 16px;
+      font-weight: 900;
+      border-radius: 23px;
+      line-height: 1.2;
+    }
+
+    .uk-card-real-price {
+      font-size: 14px;
+      color: @global-muted-color;
+    }
+  }
 }
 
 .hook-grid-misc() {
