--- a/markup/components/footer/footer.less
+++ b/markup/components/footer/footer.less
@@ -1,1 +1,67 @@
+.uk-footer-top {
+  border-top: @global-border-width solid @global-border;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  font-size: 14px;
+  color: @global-color;
+}
 
+.uk-footer-bottom {
+  border-top: @global-border-width solid @global-border;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 12px;
+  line-height: 1.5;
+  color: #A5A8AD;
+}
+
+.uk-footer-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.uk-footer-label {
+  color: #A5A8AD;
+  font-weight: 500;
+}
+
+.uk-footer-nav {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.uk-footer-nav > li > a {
+  color: inherit;
+  padding: 5px 0;
+  display: inline-flex;
+}
+
+.uk-footer-nav-bottom {
+  font-weight: bold;
+  margin-top: auto;
+}
+
+.uk-copyrightes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: -10px;
+
+  > * {
+    margin: 10px;
+  }
+}
+
+.uk-copyright-dev {
+  display: flex;
+  align-items: center;
+  max-width: 160px;
+
+  [class*="icon__"] {
+    font-size: 26px;
+    margin-right: 12px;
+  }
+}
