--- a/markup/static/less/libraries/components/base.less
+++ b/markup/static/less/libraries/components/base.less
@@ -106,6 +106,12 @@
 .hook-base-pre() {}
 
 .hook-base-misc() {
+  .uk-lead {
+    line-height: 1.63;
+    font-size: 22px;
+    margin-bottom: 30px;
+    font-weight: 100;
+  }
   .uk-date {
     font-size: 14px;
     opacity: 0.6;
