--- a/markup/static/less/libraries/modules/car.less
+++ b/markup/static/less/libraries/modules/car.less
@@ -42,6 +42,10 @@
     min-height: 350px;
     box-shadow: @global-medium-box-shadow;
 
+    &:hover {
+      text-decoration: none;
+    }
+
     .uk-card-img {
       height: 220px;
       img {
