--- a/markup/components/footer/footer.html
+++ b/markup/components/footer/footer.html
@@ -1,1 +1,68 @@
-footer
+<footer class="uk-footer">
+    <div class="uk-footer-top">
+        <div class="uk-container">
+            <div class="uk-grid uk-child-width-1-2 uk-child-width-1-4@m uk-footer-navs" data-uk-grid>
+                <div class="uk-footer-item">
+                    <div class="uk-footer-label">Автосалоны</div>
+                    <ul class="uk-footer-nav">
+                        <li><a href="#">Mercedes-Benz</a></li>
+                        <li><a href="#">Volkswagen</a></li>
+                        <li><a href="#">Renault</a></li>
+                        <li><a href="#">Opel</a></li>
+                        <li><a href="#">Skoda</a></li>
+                        <li><a href="#">Ravon</a></li>
+                        <li class="uk-footer-nav-bottom"><a href="#">Авто в наличии</a></li>
+                    </ul>
+                </div>
+                <div class="uk-footer-item">
+                    <div class="uk-footer-label">Грузовая техника</div>
+                    <ul class="uk-footer-nav">
+                        <li><a href="#">Mercedes-Benz</a></li>
+                        <li><a href="#">IVECO</a></li>
+                        <li><a href="#">Hyundai</a></li>
+                        <li><a href="#">Isuzu</a></li>
+                        <li><a href="#">DAF сервис</a></li>
+                        <li><a href="#">Ford Trucks сервис</a></li>
+                        <li><a href="#">Кияшко прицепы</a></li>
+                        <li class="uk-footer-nav-bottom"><a href="#">Акции</a></li>
+                    </ul>
+                </div>
+                <div class="uk-footer-item">
+                    <div class="uk-footer-label">Услуги</div>
+                    <ul class="uk-footer-nav">
+                        <li><a href="#">Сервис</a></li>
+                        <li><a href="#">Запасные части</a></li>
+                        <li><a href="#">Финансовый сервис</a></li>
+                        <li><a href="#">Корпоративным клиентам</a></li>
+                        <li><a href="#">Trade-in</a></li>
+                        <li><a href="#">VIP Taxi</a></li>
+                        <li><a href="#">PARK DRIVE</a></li>
+                        <li class="uk-footer-nav-bottom"><a href="#">Новости</a></li>
+                    </ul>
+                </div>
+                <div class="uk-footer-item">
+                    <div class="uk-footer-label">О компании</div>
+                    <ul class="uk-footer-nav">
+                        <li><a href="#">История компании</a></li>
+                        <li><a href="#">Наша философия</a></li>
+                        <li><a href="#">Истории успеха сотрудников</a></li>
+                        <li><a href="#">Руководство</a></li>
+                        <li><a href="#">Партнеры</a></li>
+                        <li><a href="#">Сотрудничество</a></li>
+                        <li><a href="#">Вакансии</a></li>
+                        <li><a href="#">Сувениры</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="uk-footer-bottom">
+        <div class="uk-container">
+            <div class="uk-copyrightes">
+                <div class="uk-copyright">© 2017. Все права защищены. <br> Солли Плюс — Международный автомобильный холдинг.</div>
+                <div class="uk-copyright-dev">{{Icon iconName="fulltime"}} Сайт создан веб-студией «Фултайм»</div>
+            </div>
+        </div>
+    </div>
+</footer>
