--- a/markup/static/less/libraries/components/form.less
+++ b/markup/static/less/libraries/components/form.less
@@ -66,8 +66,8 @@
 
 @form-width-xsmall:                             50px;
 @form-width-small:                              130px;
-@form-width-medium:                             200px;
-@form-width-large:                              500px;
+@form-width-medium:                             240px;
+@form-width-large:                              320px;
 
 @form-select-padding-right:                     40px;
 @form-select-icon-color:                        @global-color;
@@ -101,9 +101,11 @@
 @form-icon-hover-color:                         @global-color;
 
 @internal-form-select-image:                     "data:image/svg+xml,%3Csvg width='14' height='7' viewBox='0 0 14 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.8568 0.135266C13.6638 -0.0450886 13.3502 -0.0450886 13.1573 0.135266L7.00677 5.89533L0.844189 0.135266C0.651231 -0.0450886 0.337675 -0.0450886 0.144718 0.135266C-0.0482394 0.31562 -0.0482394 0.608696 0.144718 0.78905L6.64497 6.86473C6.74145 6.95491 6.86205 7 6.99471 7C7.11531 7 7.24796 6.95491 7.34444 6.86473L13.8447 0.78905C14.0497 0.608696 14.0497 0.31562 13.8568 0.135266V0.135266Z' fill='#A5A8AD'/%3E%3C/svg%3E%0A";
+@internal-form-select-image-inverse:             "data:image/svg+xml,%3Csvg width='14' height='7' viewBox='0 0 14 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.8568 0.135266C13.6638 -0.0450886 13.3502 -0.0450886 13.1573 0.135266L7.00677 5.89533L0.844189 0.135266C0.651231 -0.0450886 0.337675 -0.0450886 0.144718 0.135266C-0.0482394 0.31562 -0.0482394 0.608696 0.144718 0.78905L6.64497 6.86473C6.74145 6.95491 6.86205 7 6.99471 7C7.11531 7 7.24796 6.95491 7.34444 6.86473L13.8447 0.78905C14.0497 0.608696 14.0497 0.31562 13.8568 0.135266V0.135266Z' fill='white'/%3E%3C/svg%3E%0A";
 @internal-form-radio-image:                      "data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 14 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='7' cy='7' r='7' fill='white'/%3E%3C/svg%3E%0A";
 @internal-form-checkbox-image:                   "data:image/svg+xml,%3Csvg width='12' height='9' viewBox='0 0 12 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M11.8243 0.179484C11.59 -0.0598279 11.2101 -0.0598279 10.9757 0.179484L3.78737 7.5208L1.02428 4.69895C0.789972 4.45964 0.410097 4.45966 0.175746 4.69895C-0.058582 4.93824 -0.058582 5.32619 0.175746 5.5655L3.3631 8.8206C3.59734 9.05989 3.97749 9.05972 4.21163 8.8206L11.8243 1.04606C12.0586 0.806773 12.0586 0.418795 11.8243 0.179484Z' fill='white'/%3E%3C/svg%3E%0A";
 @internal-form-checkbox-indeterminate-image:     "../../images/backgrounds/form-checkbox-indeterminate.svg";
+
 
 
 // Hooks
@@ -112,11 +114,30 @@
 .hook-form() {
   border: @global-border-width solid @global-border;
   border-radius: @global-border-radius;
-  box-shadow: 0 5px 20px fade(#303032, 7%);
+  // box-shadow: 0 5px 20px fade(#303032, 7%);
+
+  &-primary {
+    border-color: @global-primary-background;
+    background-color: @global-primary-background;
+    color: #fff;
+    
+
+    &::placeholder {
+      color: #fff;
+    }
+
+    &:focus:focus {
+      background-color: @global-primary-background;
+      box-shadow: 0 5px 20px fade(@global-primary-background, 7%);
+      color: #fff;
+    }
+  }
 }
 .hook-form-single-line() {}
 .hook-form-multi-line() {}
-.hook-form-focus() {}
+.hook-form-focus() {
+  box-shadow: 0 5px 20px fade(#303032, 7%);
+}
 .hook-form-disabled() {
   border-color: @form-disabled-background;
 }
@@ -143,7 +164,16 @@
 .hook-form-horizontal-label() {}
 .hook-form-misc() {
   .uk-select:not([multiple]):not([size]) {
-    background-position: ~'calc(100% - 13px)' 50%;
+    background-position: ~'calc(100% - 13px)' 50%; 
+  }
+  .uk-select-primary:not([multiple]):not([size]) {
+    background-image: url(@internal-form-select-image-inverse);
+  }
+
+  .uk-form-width-large {
+    @media (max-width: @breakpoint-xsmall-max) {
+      width: 240px;
+    }
   }
 }
 
