--- a/markup/static/less/libraries/modules/dealer.less
+++ b/markup/static/less/libraries/modules/dealer.less
@@ -50,11 +50,21 @@
       align-items: flex-end;
     }
   }
+
+  // .uk-hero-dealer-secondary {
+  //   .uk-hero-foreground {
+  //     flex-direction: row;
+  //   }
+  // }
 }
 
-.hook-grid-misc() {
-  .uk-grid-cars {
+.hook-grid-misc() {}
 
+
+.hook-tab-misc() {
+  .uk-tab-dealers {
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
-
