--- a/markup/static/less/libraries/modules/person.less
+++ b/markup/static/less/libraries/modules/person.less
@@ -103,6 +103,12 @@
     line-height: 1.09;
     font-weight: 900;
     margin-bottom: 10px;
+    @media (max-width: @breakpoint-xsmall-max) {
+      font-size: 32px;
+    }
+    @media (max-width: @breakpoint-xsmall-max) {
+      font-size: 28px;
+    }
   }
   .uk-full-person-position {}
   .uk-full-person-contacts {
