--- a/markup/static/less/libraries/components/feature.less
+++ b/markup/static/less/libraries/components/feature.less
@@ -8,7 +8,7 @@
     text-align: left;
 
     > * {
-      margin: 15px;
+      margin: 16px;
     }
 
     .uk-card-icon {
@@ -38,13 +38,20 @@
       box-shadow: 0px 5px 40px rgba(251, 246, 89, 0.6);
     }
 
-    @media (max-width: @breakpoint-small-max) {
-      flex-wrap: wrap;
-      padding: 15px 10px;
+    @media (max-width: @breakpoint-medium-max) {
+      padding: 16px 10px;
+
+      > * {
+        margin: 8px;
+      }
       
       .uk-card-icon {
-        font-size: 50px;
+        font-size: 40px;
       }
+    }
+
+    @media (max-width: @breakpoint-small-max) {
+      flex-wrap: wrap;
     }
   }
 }
