--- a/markup/static/less/libraries/components/hero.less
+++ b/markup/static/less/libraries/components/hero.less
@@ -11,18 +11,27 @@
   left: 0;
 }
 
+.uk-hero-object {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.uk-hero-content {
+  flex-grow: 1;
+}
+
 .uk-hero-background {
-  img,
-  video,
-  iframe {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+  .uk-hero-object {
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
 
 .uk-hero-overlay {
   opacity: 0.85;
+  pointer-events: none;
 }
 
 .uk-hero-foreground {
@@ -33,10 +42,29 @@
   flex-direction: column;
 }
 
-.uk-hero-header {
-  padding-top: 40px;
-  padding-bottom: 40px;
+.uk-hero-foreground-row {
+  position: relative;
+  box-sizing: border-box;
+  min-height: inherit;
+  display: flex;
+
+  @media (max-width: @breakpoint-xsmall-max) {
+    flex-direction: column;
+  }
 }
+
+.uk-hero-height-full {
+  min-height: 100vh;
+}
+
+.uk-hero-background-switcher > :not(.uk-active) {
+  display: none;
+}
+
+// .uk-hero-header {
+//   padding-top: 40px;
+//   padding-bottom: 40px;
+// }
 
 .uk-hero-body {
   padding-top: 50px;
@@ -52,11 +80,26 @@
   font-size: 100px;
   font-weight: bold;
   line-height: 1;
+
+  @media (max-width: @breakpoint-small-max) {
+    font-size: 80px;
+    margin-bottom: 8px;
+  }
+
+  @media (max-width: @breakpoint-xsmall-max) {
+    font-size: 50px;
+  }
 }
 
 .uk-hero-description {
   font-size: 24px;
+  line-height: normal;
   font-weight: 100;
+  margin-bottom: 16px;
+
+  @media (max-width: @breakpoint-xsmall-max) {
+    font-size: 18px;
+  }
 }
 
 .uk-hero-actions {
@@ -72,11 +115,37 @@
   .uk-back {
     margin-right: auto;
   }
+
+  .uk-labels {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+
+.uk-hero-sidebar {
+  position: relative;
+  width: 300px;
+  min-height: inherit;
+  background-color: @global-muted-background;
+  overflow-y: auto;
+  max-height: 100vh;
+  z-index: 1;
+  flex-shrink: 0;
+
+  @media (max-width: @breakpoint-xsmall-max) {
+    width: 100%;
+    max-height: 40vh;
+  }
 }
 
 
 .uk-hero-main {
   min-height: 700px;
+
+  @media (max-width: @breakpoint-small-max) {
+    min-height: 100vh;
+  }
+
   .uk-hero-background,
   .uk-hero-overlay {
     bottom: 20px;
