--- a/markup/static/less/libraries/components/logo.less
+++ b/markup/static/less/libraries/components/logo.less
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   line-height: 1;
+
+  @media (max-width: 479px) {
+    max-width: 140px;
+  }
 }
 .uk-logo-image {
   margin-bottom: 8px;
@@ -19,7 +23,7 @@
 }
 
 .uk-hero {
-  .uk-logo-image {
+  .uk-logo:not(.uk-logo-default) .uk-logo-image {
     svg * {
       fill: currentColor;
     }
@@ -30,7 +34,7 @@
   .uk-logo-description {
     color: #fff;
   }
-  .uk-logo-image {
+  .uk-logo:not(.uk-logo-default).uk-logo-image {
     svg * {
       fill: currentColor;
     }
