--- a/markup/static/less/libraries/components/navbar.less
+++ b/markup/static/less/libraries/components/navbar.less
@@ -81,7 +81,9 @@
 // Hooks
 // ========================================================================
 
-.hook-navbar() {}
+.hook-navbar() {
+  line-height: normal;
+}
 .hook-navbar-container() {}
 .hook-navbar-nav-item() {}
 .hook-navbar-nav-item-hover() {}
@@ -105,7 +107,96 @@
 .hook-navbar-dropdown-nav-divider() {}
 .hook-navbar-dropbar(){}
 .hook-navbar-dropbar-slide(){}
-.hook-navbar-misc() {}
+.hook-navbar-misc() {
+  .uk-navbar-container {
+    padding-top: 40px;
+    padding-bottom: 40px;
+
+    @media (max-width: @breakpoint-xsmall-max) {
+      padding-top: 8px;
+      padding-bottom: 8px;
+    }
+  }
+
+  .uk-navbar-secondary-container {}
+  .uk-navbar-secondary {
+    display: flex;
+    font-size: 16px;
+    line-height: normal;
+    min-height: 70px;
+  }
+  .uk-navbar-secondary-left {
+    background-color: #fff;
+    display: flex;
+    flex-shrink: 0;
+  }
+  .uk-navbar-secondary-back {
+    width: 105px;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 24px;
+    flex-shrink: 0;
+    background-color: @global-primary-background;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover,
+    &:focus {
+      color: #fff;
+      background-color: darken(@global-primary-background, 10%);
+    }
+  }
+  .uk-navbar-secondary-body {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-grow: 1;
+    background-color: #fff;
+    padding: 10px;
+
+    > * {
+      margin: 10px;
+    }
+  }
+  .uk-navbar-secondary-item {}
+  .uk-navbar-secondary-nav {
+    list-style: none;
+    padding-left: 0;
+    margin-left: 0;
+    margin-right: 0;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+    > li {
+      > a {
+        padding: 10px;
+        font-weight: 500;
+      }
+      &:not(:last-child) {
+        &::after {
+          content: '/';
+          margin: 0 4px;
+          color: @global-muted-color;
+        }
+      }
+
+      &.uk-active {
+        > a,
+        > a:hover,
+        > a:focus {
+          color: @global-color;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+
+}
 
 
 // Inverse
