--- a/markup/static/less/libraries/components/page.less
+++ b/markup/static/less/libraries/components/page.less
@@ -10,6 +10,10 @@
   z-index: 100;
   flex-shrink: 0;
   display: flex;
+
+  @media (max-width: @breakpoint-small-max) {
+    display: none;
+  }
 }
 
 .uk-page-body {
