--- a/markup/static/less/libraries/components/price.less
+++ b/markup/static/less/libraries/components/price.less
@@ -1,14 +1,20 @@
 .uk-price {
   max-width: 440px;
+
+  @media (max-width: @breakpoint-xsmall-max) {
+    max-width: none;
+    flex-direction: column;
+  }
 }
 
 .uk-price-inputs {
   display: flex;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
 
 .uk-price-divider {
+  flex-shrink: 0;
   height: 1px;
   width: 40px;
   margin: 20px;
