--- a/markup/static/less/libraries/components/swiper.less
+++ b/markup/static/less/libraries/components/swiper.less
@@ -5,6 +5,8 @@
 
 .swiper-slide {
   height: auto;
+  background-size: cover;
+  background-position: center;
 }
 
 .swiper-slide:first-child {
@@ -13,12 +15,81 @@
 
 .swiper-scrollbar {
   margin-top: 40px;
+  margin-bottom: 10px;
   height: 4px;
   background-color: #F1F2F4;
-  border-radius: 500px; 
+  border-radius: 500px;
+  cursor: pointer;
 }
 .swiper-scrollbar-drag {
   border-radius: inherit;
+  position: relative;
+  top: 0;
   height: 100%;
   background-color: #376BC7;
+  transition: all 0.2s;
+}
+
+.swiper-scrollbar:hover .swiper-scrollbar-drag,
+.swiper-scrollbar:active .swiper-scrollbar-drag {
+  top: -4px;
+  height: ~'calc(100% + 8px)';
+  box-shadow: 0 0 10px fade(@global-primary-background, 40%);
+}
+
+.swiper-rest {
+  color: #fff;
+  background-color: @global-primary-background;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.swiper-rest-value {
+  font-weight: 900;
+  line-height: normal;
+  font-size: 32px;
+  @media (max-width: @breakpoint-small-max) {
+    font-size: 24px;
+  }
+}
+
+.swiper-rest-text {
+  font-weight: normal;
+  line-height: normal;
+  font-size: 12px;
+}
+
+.swiper-rest:not(.swiper-rest-active) {
+  display: none !important;
+}
+
+.uk-slidenavs {
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+
+
+  &::before {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 96px;
+    background: linear-gradient(180deg, rgba(48, 48, 50, 0) 0%, rgba(48, 48, 50, 0.6) 100%);
+  }
+}
+
+.uk-slidenav {
+  padding: 20px;
 }
