--- a/markup/static/less/libraries/modules/stock.less
+++ b/markup/static/less/libraries/modules/stock.less
@@ -35,10 +35,29 @@
       opacity: .6;
     }
   }
+  
 }
 
 .hook-section-misc() {
-  
+  .uk-section-stock {
+    padding-top: 10px;
+    .uk-filter-stock {
+      margin-bottom: 60px;
+    }
+  }
+
+  .uk-not-found-block {
+    .uk-form-subscription {
+      .uk-button-link {
+        font-size: 16px;
+        .uk-btn-icon {
+          font-size: 20px;
+          display: inline-block;
+          margin-right: 15px;
+        }
+      }
+    }
+  }
 }
 
 .hook-grid-misc() {
